<resources>
    <string name="app_name">personasApp</string>
    <string name="btn_editar">Editar registro</string>
    <string name="txt_name">Ingrese su nombre</string>
    <string name="txt_apellido">Ingrese su apellido</string>
    <string name="txt_edad">Ingrese su edad</string>
    <string name="txt_correo">Ingrese su correo</string>
    <string name="txt_direccion">Espcifique su dirección</string>
</resources>